--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "susy": "^3.0.5"
   },
   "devDependencies": {
-    "node-sass": "^4.9.0"
+    "node-sass": "git+https://github.com/sass/node-sass.git#v4.7.0"
   }
 }
